src/css/styles.css
:root {
    --moderate-violet: hsl(263, 55%, 52%);
    --very-dark-grayish-blue: hsl(217, 19%, 35%);
    --very-dark-blackish-blue: hsl(219, 29%, 14%);
    --white: hsl(0, 0%, 100%);
    --light-gray: hsl(0, 0%, 81%);
    --light-grayish-blue: hsl(210, 46%, 95%);
}

body {
    background-color: var(--light-grayish-blue);
}

main {
    display: flex;
    align-items: center;
    justify-content: center;
}

.container {
    display: grid;
    gap: 1.5rem;
    padding: 4.5rem 1.5rem;
}

.card {
    display: flex;
    flex-direction: column;
    padding: 1.5rem 1.875rem 2rem;
    border-radius: 8px;
    gap: 1rem;
}

.card .profile {
    display: flex;
    align-items: center;
    gap: 1rem;
}

.card .profile img {
    border: 2px solid hsla(0, 0%, 0%, 0%);
    border-radius: 50%;
    width: 2rem;
}

.card.first .profile img {
    border-color: hsla(0, 0%, 81%, 50%);
}

.card.fourth .profile img {
    border-color: hsl(263, 55%, 52%);
}

.card .profile .id {
    display: flex;
    flex-direction: column;
    font-weight: 400;
}

.card .profile .id .name {
    font-size: .8125rem;
}

.card .profile .id .status {
    font-size: .6875rem;
    opacity: 50%;
}

.card.light .profile .id {
    color: var(--white);
}

.card.dark .profile .id {
    color: var(--very-dark-grayish-blue);
}

.card p {
    font-size: 1.25rem;
    font-weight: 500;
    padding-left: .125rem;
    padding-right: .4rem;
}

.card blockquote {
    opacity: 70%;
    font-size: .8125rem;
    font-weight: 500;
    line-height: 1.1rem;
    padding-left: .125rem;
    padding-right: 1.1rem;
}

.card.light p {
    color: var(--white);
}

.card.light blockquote {
    color: var(--light-gray);
}

.card.dark p, .card.dark blockquote {
    color: var(--very-dark-grayish-blue);
}

.first {
    background-color: var(--moderate-violet);
    background-image: url(/images/bg-pattern-quotation.svg);
    background-repeat: no-repeat;
    background-position: top 0 right 1.5rem;
}

.second {
    background-color: var(--very-dark-grayish-blue);
}

.third {
    background-color: var(--white);
}

.fourth {
    background-color: var(--very-dark-blackish-blue);
}

.fifth {
    background-color: var(--white);
}

.attribution {
    background-color: var(--very-dark-blackish-blue);
    text-align: center;
    font-size: .6rem;
    padding: 10px;
}

.attribution span {
    color: var(--light-gray);
}

.attribution a {
    color: #6abecd;
}

